# udemy_100_days_of_code_python

./: .gitignore  README.md  day001_band_name_generator.py  pyproject.toml
day_001_variables/: band_name_generator.py
day_002_data_types_string_manipulation/: tip_calculator.py
day_003_control_flow_logical_operators/: treasure_island_text_game.py
day_004_lists_and_randomization/: rock_paper_scissors.py
day_005_loops/: password_generator.py
day_007_hangman/: fizzbuzz.py  main.py
