[tool.poetry]
name = "udemy_100_days_of_code_python"
version = "0.1.0"
description = ""
authors = ["Devon Biere <dbiere@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
